manifests/telemetry/base/prometheus/prometheus.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/name: prometheus
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - port: web
              protocol: TCP
          rules:
            http: [{}]
